tests/ui/typeck/function_calls/new_library.sol
//@ compile-flags: -Ztypeck

library L {}
contract C {
    function f() public pure {
        new L(); //~ ERROR: cannot instantiate librarys
    }
}
